--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
+    "react-datepicker": "^8.5.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
